Blender2.8: New windows triple buffer broken #49505

Closed
opened 2016-09-30 18:43:20 +02:00 by Dalai Felinto · 7 comments

System Information
Windows 10, NVidia GTX 960M

Blender Version
Broken: 4a1feaa5
Worked: 1d469f37 (aka 4a1feaa5^)

Short description of error
The drawing of new windows (e.g., User Preferences) won't work when mouse hover outside of it (i.e., when triple buffer drawing takes over).

Exact steps for others to reproduce the error
bug.gif

**System Information** Windows 10, NVidia GTX 960M **Blender Version** Broken: 4a1feaa5 Worked: 1d469f37 (aka 4a1feaa5^) **Short description of error** The drawing of new windows (e.g., User Preferences) won't work when mouse hover outside of it (i.e., when triple buffer drawing takes over). **Exact steps for others to reproduce the error** ![bug.gif](https://archive.blender.org/developer/F371615/bug.gif)
Mike Erwin was assigned by Dalai Felinto 2016-09-30 18:43:20 +02:00
Author
Owner

Changed status to: 'Open'

Changed status to: 'Open'
Author
Owner

Added subscribers: @JulianEisel, @dfelinto

Added subscribers: @JulianEisel, @dfelinto
Member

Tested on Win 10 with FirePro W7100 and Quadro K600, have not seen the problem yet.

But! Just tested both GPUs on Linux (Mesa) and start seeing black as reported. I'll work on a fix.

Tested on Win 10 with FirePro W7100 and Quadro K600, have not seen the problem yet. But! Just tested both GPUs on Linux (Mesa) and start seeing black as reported. I'll work on a fix.
Member

@dfelinto, @JulianEisel, how about now? I was poking around in the triple buffer code today and it seems fixed on my end.

@dfelinto, @JulianEisel, how about now? I was poking around in the triple buffer code today and it seems fixed on my end.
Member

In a twist of fate, Windows & Linux now work for me, but Mac started having the triple buffer issue.

So nevermind about closing this task! I'll look at it more later this week.

In a twist of fate, Windows & Linux now work for me, but Mac started having the triple buffer issue. So nevermind about closing this task! I'll look at it more later this week.
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Fixed by 6388d0c4a0

Fixed by 6388d0c4a0
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#49505
No description provided.